# hackathon-dishka

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.ci.yml  docker-compose.yml  jwtRS512.key  jwtRS512.key.pub  pyproject.toml
.envs/fastapi/: .env.example  .env.local  .env.test
.github/: pull_request_template.md
.github/workflows/: deploy_dev.yaml  pull_request.yml  tests.yml
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
service_platform_py/: __main__.py  conftest.py  settings.py
service_platform_py/api/: application.py  lifetime.py
service_platform_py/api/auth_backend/: auth_backend.py
service_platform_py/api/router/: __init__.py  router.py
service_platform_py/api/router/health/: __init__.py  route.py
service_platform_py/api/router/user/: __init__.py  manager.py  route.py  route_client.py  schema.py
service_platform_py/client/: base_client.py
service_platform_py/client/health/: client.py
service_platform_py/client/user/: client.py
service_platform_py/core/: base_schema.py  class_router.py  exception_handler.py
service_platform_py/core/auth/: authentication.py
service_platform_py/core/authorization/: base_permission.py  is_authenticated.py
service_platform_py/core/errors/: __init__.py  error_code.py
service_platform_py/core/repository/: error_code.py  repository_base.py
service_platform_py/core/response/: app_response.py
service_platform_py/core/utils/: timezone.py
service_platform_py/db/: base_table.py
service_platform_py/db/user/: repository.py  table.py
service_platform_py/service/postgres/: dependency.py  lifetime.py
service_platform_py/service/redis/: dependency.py  lifetime.py
service_platform_py/service/tkq/: tkq.py
service_platform_py/tests/: conftest.py  test_service_platform_py.py  test_user.py
spartan_api_python/: __init__.py  __main__.py  settings.py  tkq.py  utils.py
spartan_api_python/api/: __init__.py  application.py  lifecycle.py
spartan_api_python/api/router/: router.py
spartan_api_python/api/router/bot/: route.py  schema.py
spartan_api_python/api/router/echo/: route.py  schema.py
spartan_api_python/api/router/health/: __init__.py  route.py  schema.py
spartan_api_python/api/router/user/: __init__.py  schema.py
spartan_api_python/api/views/: __init__.py  index.py  router.py
spartan_api_python/core/: __init__.py  exception_handler.py  schema_api_base.py
spartan_api_python/core/response/: __init__.py  app_response.py
spartan_api_python/db/: base.py
spartan_api_python/db/user/: repository.py  table.py
spartan_api_python/service/: __init__.py
spartan_api_python/service/ai/: __init__.py  callback.py  config.py  langchain.py  loader.py  memory.py
spartan_api_python/service/ai/train/: langchain_concept.txt  langchain_knowledge.txt
spartan_api_python/service/redis/: lifetime.py
spartan_api_python/templates/: index.html
spartan_api_python/tests/: __init__.py
spartan_api_python/tests/db/user/: test_repository.py
spartan_api_python/tests/services/ai/: test_memory.py
sql/: 000-init.sql  001-user.sql  baseline.sql  beforeClean.sql  flyway.conf  flyway.test.conf
src/: jwtRS512.key  jwtRS512.key.pub
src/service_platform/: Dockerfile  __main__.py
src/service_platform/api/: application.py  lifetime.py
src/service_platform/api/controller/: router.py  schema.py
src/service_platform/api/factory/: CoreFactory.py  DatabaseFactory.py  ManagerFactory.py  RedisFactory.py
src/service_platform/client/: base_client.py
src/service_platform/client/auth0/: client.py
src/service_platform/client/google/: client.py  response.py
src/service_platform/client/health/: client.py
src/service_platform/client/linkedin/: client.py
src/service_platform/client/model/: __init__.py  auth_provider.py  user_role.py
src/service_platform/client/zoom/: client.py
src/service_platform/core/: base_schema.py  class_router.py  exception_handler.py  logger.py
src/service_platform/core/errors/: __init__.py  (+1 more)
src/service_platform/db/: base_table.py
src/service_platform/exception/: auth_error.py  base_error.py  exception_handler.py  server_error.py  user_error.py
src/service_platform/settings/: config.prod.yaml  config.py  config.yaml  settings.py
src/service_platform/sql/: V0.000__init.sql  V0.001__user.sql  V0.002__refresh_token.sql  baseline.sql  beforeClean.sql
src/service_platform/tests/: conftest.py
src/service_platform/utils/: file_utils.py  logger.py  string_utils.py
(+78 files in other folders)
