[tool.poetry]
name = "spartan_api_python"
version = "0.1.0"
description = ""
authors = [

]
maintainers = [

]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.89.1"
uvicorn = { version = "^0.20.0", extras = ["standard"] }
pydantic = { version = "^1.10.4", extras = ["dotenv"] }
yarl = "^1.8.2"
ujson = "^5.7.0"
SQLAlchemy = { version = "^2.0.22", extras = ["asyncio"] }
psycopg2 = { version = "^2.9.9" }
dependency-injector = { version = "^4.41.0" }

redis = { version = "4.4.2", extras = ["hiredis"] }
httptools = "^0.5.0"
taskiq = "^0"
taskiq-fastapi = "^0"
taskiq-redis = "^0"
pyzmq = "^25.0.2"
langchain = "^0.0.195"
pinecone-client = "^2.2.2"
openai = "^0.27.8"
unstructured = "^0.7.5"
tiktoken = "^0.4.0"
jinja2 = "^3.1.2"
psycopg2-binary = "^2.9.9"


[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
flake8 = "~4.0.1"
mypy = "^1.1.1"
isort = "^5.11.4"
pre-commit = "^3.0.1"
wemake-python-styleguide = "^0.17.0"
black = "^22.12.0"
autoflake = "^1.6.1"
pytest-cov = "^4.0.0"
anyio = "^3.6.2"
pytest-env = "^0.8.1"
httpx = "^0.23.3"
taskiq = { version = "^0", extras = ["reload"] }

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["spartan_api_python", ]

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true

# Remove this and add `types-redis`
# when the issue https://github.com/python/typeshed/issues/8242 is resolved.
[[tool.mypy.overrides]]
module = [
    'redis.asyncio'
]
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]
env = [
    "ENVIRONMENT=test",
    "DB_BASE=spartan_api_python_test",
]

[fastapi-template.options]
project_name = "spartan_api_python"
api_type = "rest"
enable_redis = "True"
enable_rmq = "None"
ci_type = "github"
enable_migrations = "None"
enable_taskiq = "True"
enable_kube = "None"
kube_name = "spartan-openai"
enable_routers = "True"
enable_kafka = "None"
enable_loguru = "None"
traefik_labels = "None"
add_dummy = "None"
orm = "none"
self_hosted_swagger = "None"
prometheus_enabled = "None"
sentry_enabled = "None"
otlp_enabled = "None"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
