[tool.poetry]
name = "service_platform_py"
version = "0.1.0"
description = ""
authors = [
    "spartan-khanhnguyen <khanh.nguyen@c0x12c.com>",
    "spartan-khoahuynh <khoa.huynh@c0x12c.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.29.0"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
fastapi = "^0.111.0"
redis = "^5.0.4"
taskiq = "^0.11.3"
taskiq-fastapi = "^0.3.1"
taskiq-redis = "^0.5.6"
yarl = "^1.9.4"
sqlalchemy = "^2.0.30"
psycopg2 = "^2.9.9"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
typing-inspect = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
ruff = "^0.4.4"
pytest = "^7.2.1"
pytest-env = "^0.8.1"
pytest-cov = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
